fix gap

--- a/css/main.orig.css
+++ b/css/main.orig.css
@@ -1,17 +1,20 @@
-@import url("normalize.css");
+@import url("bootstrap-reboot.css");
+@import url("bootstrap.css");
+/* @import url("bootstrap-grid.css"); */
 
 .ui {
+  background-color: beige;
   display: flex;
   flex-direction: column;
   font:
     0.875rem Helvetica,
     Arial,
     sans-serif;
+  line-height: 1.15;
   max-width: 30rem;
-  background-color: beige;
 }
 
-button {
+.outlinebutton {
   background-color: transparent;
   border-color: blue;
   border-radius: 0.375rem;
@@ -19,39 +22,38 @@ button {
   border-width: 1px;
   color: blue;
   cursor: pointer;
-  user-select: none;
   transition-duration: 0.15s, 0.15s, 0.15s, 0.15s;
   transition-property: color, background-color, border-color, box-shadow;
   transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+  user-select: none;
   width: 4rem;
 }
 
-button:hover {
+.outlinebutton:hover {
   background-color: blue;
   color: white;
 }
 
-button:active {
+.outlinebutton:active {
   background-color: navy;
   color: white;
 }
 
-button:disabled {
-  pointer-events: none;  
+.outlinebutton:disabled {
   opacity: 0.35;
+  pointer-events: none;  
 }
 
-button:focus-visible {
+.outlinebutton:focus-visible {
   background-color: blue;
-  color: white;
   box-shadow: 0 0 0 0.25rem skyblue;
+  color: white;
   outline: 0;
-
 }
 
-.row {
-  display: flex;
+.Xrow {
   align-items: center;
+  display: flex;
   justify-content: space-between;
   margin: 0.5rem;
 }
@@ -83,8 +85,8 @@ button:focus-visible {
   cursor: text;
   padding: .375rem .75rem;
   position: relative;
-  transition: box-shadow 0s ease-in-out 0.15s;
   transition: border-color 0s ease-in-out 0.15s;
+  transition: box-shadow 0s ease-in-out 0.15s;
 }
 
 .elem:focus {
@@ -104,10 +106,19 @@ button:focus-visible {
   font-size: .75rem
 }
 
-#uploadinput {
-  opacity: 0;
+.uploadinput {
+  padding: 0.375rem 0.75rem;
+  margin: -0.375rem -0.75rem;
+  -webkit-margin-end: 0.75rem;
+  margin-inline-end: 0.75rem;
+  color: #dee2e6;
+  background-color: #2b3035;
+  pointer-events: none;
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+  border-inline-end-width: 1px;
+  border-radius: 0;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-
-#selectfile {
-  background-color: yellow;
-}
+	
